solc_ossfuzz_seed_corpus/test_sol/test_cd641862af86f8d7876a1d55f7624c8028da940a9739c49ab3ea3a151bdb9ea6_56fc2437772305182bb51bfde043bef9f9e285d3_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  modifier m0() 
  {
    _;
  }
  function f0(function (int128, uint232) external   returns (bool[][] memory, bytes12, bytes memory) i0,int40 i1) internal    returns(bytes23 o0,bytes18 o1)
  {
    assembly
    {
      let al0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
    }
  }
  function f1(int48 i0) public    returns(function (bytes6) internal   returns (function () internal   returns (bool, bytes32), bool) o0,bool o1)
  {
  }
}
// ----
// TypeError 4103: (su0.sol:399-493): Internal type is not allowed for public or external functions.
